Bug Fixes and Quality of Life Improvements

--- a/index.html
+++ b/index.html
@@ -1,29 +1,28 @@
+
 <!DOCTYPE html>
 <html>
-  <head>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="index.js"></script>
-  </head>
-  <body>
-    <br />
+	<head>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+	<script src="index.js"></script>
+	</head>
+	<body>
 
-    <select id="solutions">
-      <option>Select a Solution</option>
-    </select>
+	<br/>
+	Pick a solution:<br/>
+	<select id='solutions'>
+		<option></option>
+	</select>
 
-    <br /><br />
+	<br/><br/>
 
-    <canvas
-      id="myCanvas"
-      width="350"
-      height="300"
-      style="border: 1px solid #c3c3c3"
-    >
-      Your browser does not support the canvas element.
-    </canvas>
+	<canvas id="myCanvas" width="100" height="100"
+	style="border:1px solid #c3c3c3;">
+	Your browser does not support the canvas element.
+	</canvas>
 
-    <br /><br />
+	<br/><br/>
 
-    <button id="next" type="button">Click Me!</button>
-  </body>
+	<button id="next" type="button">Show Path</button> 
+
+	</body>
 </html>
